syntax = "proto3";

package rivet.backend.pkg.cluster.server_list;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {
	rivet.backend.cluster.ServerFilter filter = 1;
	bool include_destroyed = 2;
}

message Response {
	repeated rivet.backend.cluster.Server servers = 1;
}
